testdata/baselines/reference/submodule/compiler/contravariantOnlyInferenceWithAnnotatedOptionalParameterJs.errors.txt
index.js(6,17): error TS7006: Parameter 'predicate' implicitly has an 'any' type.
index.js(14,4): error TS7006: Parameter 'pose' implicitly has an 'any' type.
index.js(22,4): error TS7006: Parameter 'pose' implicitly has an 'any' type.
index.js(22,10): error TS7006: Parameter '_' implicitly has an 'any' type.


==== index.js (4 errors) ====
    /**
     * @template T
     * @param {(value: T, index: number) => boolean} predicate
     * @returns {T}
     */
    function filter(predicate) {
                    ~~~~~~~~~
!!! error TS7006: Parameter 'predicate' implicitly has an 'any' type.
      return /** @type {any} */ (null);
    }
    
    const a = filter(
      /**
       * @param {number} [pose]
       */
      (pose) => true
       ~~~~
!!! error TS7006: Parameter 'pose' implicitly has an 'any' type.
    );
    
    const b = filter(
      /**
       * @param {number} [pose]
       * @param {number} [_]
       */
      (pose, _) => true
       ~~~~
!!! error TS7006: Parameter 'pose' implicitly has an 'any' type.
             ~
!!! error TS7006: Parameter '_' implicitly has an 'any' type.
    );
    